# HubNear

./: .env.example  DEPLOYMENT.md  LICENSE  Makefile  README.md  deploy-frontend.sh  docker-compose.yml  ecosystem.config.cjs  nginx.conf  setup-server.sh
HubNear/: index.html  package-lock.json  package.json  vite.config.ts
HubNear/app/: index.html
HubNear/public/: manifest.json
HubNear/src/app/: App.tsx  App.tsx.bak  theme.ts  types.ts
HubNear/src/app/api/: activities.ts  auth.ts  catalog.ts  chats.ts  cities.ts  client.ts  friends.ts  me.ts  places.ts  types.ts  ws.ts
HubNear/src/app/components/: event-card.tsx  navigation.tsx  skeleton-card.tsx
HubNear/src/app/constants/: styles.ts
HubNear/src/app/data/: chats.ts  events.ts  notifications.ts
HubNear/src/app/hooks/: useChats.ts  useEvents.ts  useFriends.ts  useHubData.ts  (+2 more)
HubNear/src/styles/: globals.css  theme.css
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: db.py  main.py  redis.py
backend/app/api/: errors.py
backend/app/api/v1/: dependencies.py  pagination.py  router.py  schemas.py
backend/app/api/v1/repositories/: activity_repo.py  user_repo.py
backend/app/api/v1/routes/: activities.py  auth.py  catalog.py  chats.py  cities.py  friends.py  me.py  ws.py
backend/app/api/v1/routes/me/: __init__.py  devices.py  my_activities.py  notifications.py  places.py  profile.py
backend/app/core/: config.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_user_devices.py  0003_social_features.py
backend/tests/: conftest.py  test_api.py
(+15 files in other folders)
