[project]
name = "backend"
version = "0.1.0"
description = "Dvizh backend API"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.138.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "redis[hiredis]>=5.3.0",
    "sqlalchemy[asyncio]>=2.0.51",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]
